--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,56 @@
-*{
-  margin: 0;
-  padding: 0;
+@import "mixin";
+@import "global";
+@import "verebles";
+
+#hero {
+  .hero {
+    h1 {
+      @include text;
+
+    }
+
+    span {
+      @include span;
+
+    }
+
+    &--group {
+      @include df;
+
+      &--first {
+
+        &--one {
+          width: 70%;
+          background: #FFFFFF;
+          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+          padding: 30px 30px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          img {
+            position: relative;
+            bottom: 50px;
+          }
+
+          ul {
+            @include text-one;
+          }
+
+          p {
+            @include para;
+          }
+
+        }
+
+        button {
+          @include button;
+          margin: 15px 0;
+        }
+
+
+      }
+    }
+
+  }
 }
