--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ a {
 }
 #hero .hero--group--first--one p {
   font-family: "Gilroy", sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
@@ -87,6 +86,127 @@ a {
   background: transparent;
   color: black;
   transform: scale(1.12);
+}
+
+#swiper-group .swiper-group {
+  background: url("../img/bg.png") no-repeat center/cover;
+  min-height: 90vh;
+  margin: 20px 0;
+}
+#swiper-group .swiper-group h2 {
+  font-family: "Futura PT", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 46px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #181818;
+  color: #FFFFFF;
+  padding: 40px 0;
+}
+#swiper-group .swiper-group span {
+  font-family: "Futura PT", sans-serif;
+  font-weight: 560;
+  font-size: 36px;
+  line-height: 46px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #EDD713;
+}
+#swiper-group .swiper-group--swiper {
+  width: 100%;
+  height: 100%;
+}
+#swiper-group .swiper-group .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+#swiper-group .swiper-group .swiper-slide img {
+  display: block;
+  object-fit: cover;
+}
+
+#pro .pro h4 {
+  font-family: "Futura PT", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 46px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #181818;
+}
+#pro .pro span {
+  font-family: "Futura PT", sans-serif;
+  font-weight: 560;
+  font-size: 36px;
+  line-height: 46px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #EDD713;
+}
+#pro .pro--blocks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+#pro .pro--blocks--first {
+  display: flex;
+  align-items: center;
+}
+#pro .pro--blocks--first--one__bloc {
+  width: 96%;
+  background: #000000;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  font-family: "Gilroy", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  text-align: center;
+  color: #181818;
+}
+#pro .pro--blocks--first--one__bloc h2 {
+  font-family: "Gilroy", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 140%;
+  color: #181818;
+}
+#pro .pro--blocks--first--one__bloc span {
+  font-family: "Futura PT", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 143%;
+  text-transform: uppercase;
+  padding: 1px 0;
+}
+#pro .pro--blocks--first--one__bloc p {
+  font-family: "Gilroy", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  text-align: center;
+  color: #181818;
 }
 
 /*# sourceMappingURL=style.css.map */
