--- a/style.scss
+++ b/style.scss
@@ -54,3 +54,100 @@
 
   }
 }
+
+#swiper-group {
+  .swiper-group {
+    background: url("../img/bg.png") no-repeat center/cover;
+    min-height: 90vh;
+    margin: 20px 0;
+
+    h2 {
+      @include text;
+      color: #FFFFFF;
+      padding: 40px 0;
+    }
+
+    span {
+      @include span;
+    }
+
+    img {
+      //width: 30px;
+    }
+
+    &--swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      object-fit: cover;
+    }
+
+  }
+}
+
+#pro {
+  .pro {
+    h4 {
+      @include text;
+    }
+
+    span {
+      @include span;
+    }
+
+    &--blocks {
+      @include df3;
+
+      &--first {
+        @include df2;
+
+        &--one {
+          img {
+
+          }
+
+          &__bloc {
+            @include block;
+            @include black;
+
+
+            h2 {
+              @include para2;
+            }
+
+            span {
+              @include swiper2;
+            }
+
+            p {
+              @include black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
