--- a/global.scss
+++ b/global.scss
@@ -22,6 +22,8 @@ body{
   margin: 0 auto;
 }
 
+
+ //burder menu//
 #menu__toggle {
   opacity: 0;
 }
@@ -98,5 +100,6 @@ body{
   color: yellow;
   background-color: rgba(0, 0, 0, 0.1);
 }
+
 
 
