--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
     padding: 0 20px;
   }
   .header--logo__advertisingend a {
-    font-size: 10px !important;
+    font-size: 9px !important;
   }
   .header--logo__contact {
     margin-left: 20px;
@@ -143,8 +143,25 @@ body {
     font-size: 18px !important;
   }
 }
+@media (max-width: 1180px) {
+  #header .header--logo__advertisingend a {
+    font-size: 9px !important;
+  }
+}
 @media (max-width: 1024px) {
-  #header .header--logo {
+  #header .header--logo__advertising {
+    display: none !important;
+  }
+  #header .header--logo__advertisingtwo {
+    display: none !important;
+  }
+  #header .header--logo__advertisingthree {
+    display: none !important;
+  }
+  #header .header--logo__advertisingend {
+    display: none !important;
+  }
+  #header .header--logo__contact {
     display: none !important;
   }
   #header .header--nav {
