--- a/media.scss
+++ b/media.scss
@@ -37,7 +37,7 @@
 
       &__advertisingend {
         a {
-          font-size: 10px !important;
+          font-size: 9px !important;
 
         }
 
@@ -85,16 +85,51 @@
     }
   }
 }
+@media (max-width: 1180px) {
+  #header {
+    .header {
+      &--logo {
+        &__advertisingend {
+          a {
+            font-size: 9px !important;
+
+          }
+
+        }
+      }
+    }
+  }
+}
 @media (max-width: 1024px) {
 
   #header {
     .header {
       &--logo {
-        display: none !important;
 
+        &__advertising {
+          display: none !important;
+        }
+
+        &__advertisingtwo {
+          display: none !important;
+
+        }
+
+        &__advertisingthree {
+          display: none !important;
+
+        }
+
+        &__advertisingend {
+          display: none !important;
+
+        }
+
+        &__contact {
+          display: none !important;
+        }
 
       }
-
       &--nav {
         display: none !important;
 
@@ -110,35 +145,24 @@
 
 
       }
-
 @media (max-width: 768px) {
 
 }
-
 @media (max-width: 1440px) {
 
 }
-
 @media (max-width: 1440px) {
 
 }
-
 @media (max-width: 1440px) {
 
 }
-
 @media (max-width: 1440px) {
 
 }
-
 @media (max-width: 1440px) {
 
 }
-
-@media (max-width: 1440px) {
-
-}
-
 @media (max-width: 1440px) {
 
 }
