--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 .container {
   width: 90%;
   margin: 0 auto;
