--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,16 @@
   padding: 0;
 }
 
+body {
+  font-family: sans-serif;
+}
+
 a {
   text-decoration: none;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
@@ -12,6 +20,357 @@ a {
   margin: 0 auto;
 }
 
+#menu__toggle {
+  opacity: 0;
+}
+
+#menu__togx xor:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+#menu__toggle:checked ~ .menu__box {
+  left: 0 !important;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+.menu__btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #0a0a0a;
+  transition-duration: 0.25s;
+}
+
+.menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+
+.menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  left: -100%;
+  width: 300px;
+  height: auto;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: rgba(172, 234, 27, 0.53);
+  box-shadow: 2px 2px 6px rgba(161, 15, 15, 0.74);
+  transition-duration: 0.25s;
+}
+
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: 0.25s;
+}
+
+.menu__item:hover {
+  text-decoration-line: underline;
+  color: yellow;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1200px) {
+  .header--logo__image img {
+    margin-right: 40px;
+    width: 90%;
+  }
+  .header--logo__advertising a {
+    padding: 0 20px;
+  }
+  .header--logo__advertisingtwo a {
+    max-width: 100px;
+    padding: 0 20px;
+    font-weight: 400;
+    font-size: 14px !important;
+  }
+  .header--logo__advertisingthree a {
+    padding: 0 20px;
+  }
+  .header--logo__advertisingend a {
+    font-size: 9px !important;
+  }
+  .header--logo__contact {
+    margin-left: 20px;
+  }
+  .header--logo__contact--midl {
+    font-size: 20px !important;
+  }
+}
+@media (max-width: 1090px) {
+  #header .header--logo__advertising a {
+    width: 137px;
+  }
+  #header .header--logo__contact--midl {
+    font-size: 18px !important;
+  }
+}
+@media (max-width: 1180px) {
+  #header .header--logo__advertisingend a {
+    font-size: 9px !important;
+  }
+}
+@media (max-width: 1024px) {
+  #header .header--logo__advertising {
+    display: none !important;
+  }
+  #header .header--logo__advertisingtwo {
+    display: none !important;
+  }
+  #header .header--logo__advertisingthree {
+    display: none !important;
+  }
+  #header .header--logo__advertisingend {
+    display: none !important;
+  }
+  #header .header--logo__contact {
+    display: none !important;
+  }
+  #header .header--nav {
+    display: none !important;
+  }
+}
+@media (max-width: 992px) {
+  .hamburger-menu {
+    display: block;
+  }
+}
+#header {
+  padding: 30px 0;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background: rgba(17, 16, 16, 0.17);
+  backdrop-filter: blur(15px);
+}
+#header .header--logo {
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+#header .header--logo__image img {
+  margin-top: -10px;
+}
+#header .header--logo__advertising a {
+  padding-bottom: 3px;
+  font-family: "Gilroy", sans-serif;
+  font-weight: 440;
+  font-size: 12px;
+  color: #FFFFFF;
+  transition: 0.3s;
+}
+#header .header--logo__advertising a:hover {
+  text-decoration-line: underline;
+  color: #F5E934;
+}
+#header .header--logo__advertising--two {
+  display: flex;
+  align-items: center;
+  max-width: 200px;
+  font-family: "Gilroy", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  color: #FFFFFF;
+}
+#header .header--logo__advertising--two ion-icon {
+  color: #F5E934;
+  font-size: 20px;
+  transition: 0.3s;
+}
+#header .header--logo__advertising--two ion-icon:hover {
+  color: #F5E934;
+}
+#header .header--logo__advertisingtwo {
+  display: flex;
+  align-items: center;
+  max-width: 200px;
+}
+#header .header--logo__advertisingtwo img {
+  background: #735b5b;
+  border-radius: 50%;
+}
+#header .header--logo__advertisingtwo a {
+  padding-left: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  text-decoration-line: underline;
+  color: #FFFFFF;
+  transition: 0.3s;
+}
+#header .header--logo__advertisingtwo a:hover {
+  color: #F5E934;
+}
+#header .header--logo__advertisingthree a {
+  font-family: "Gilroy", sans-serif;
+  font-weight: 440;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+#header .header--logo__advertisingthree a:hover {
+  text-decoration-line: underline;
+  color: #F5E934;
+}
+#header .header--logo__advertisingthree--icons {
+  padding-top: 8px;
+  display: flex;
+}
+#header .header--logo__advertisingthree--icons ion-icon {
+  margin-left: 10px;
+  padding: 9px 9px;
+  border-radius: 50%;
+  color: #f09433;
+  background: #FFFFFF;
+  transition: 0.4s;
+}
+#header .header--logo__advertisingthree--icons ion-icon:hover {
+  background: #F5E934;
+}
+#header .header--logo__advertisingthree--icons__in ion-icon {
+  padding: 9px 9px;
+  border-radius: 50%;
+  background: #FFFFFF;
+  color: #63AAF1;
+}
+#header .header--logo__advertisingend a {
+  padding-bottom: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+#header .header--logo__advertisingend a:hover {
+  text-decoration-line: underline;
+  color: #F5E934;
+}
+#header .header--logo__advertisingend--icon {
+  display: flex;
+  padding-top: 8px;
+}
+#header .header--logo__advertisingend--icon ion-icon {
+  margin: 0 10px;
+  padding: 9px 9px;
+  border-radius: 50%;
+  color: #48C95F;
+  background: #FFFFFF;
+  transition: 0.4s;
+}
+#header .header--logo__advertisingend--icon ion-icon:hover {
+  background: #F5E934;
+}
+#header .header--logo__advertisingend button {
+  background: none;
+  border: none;
+}
+#header .header--logo__advertisingend button ion-icon {
+  background: #FFFFFF;
+  padding: 9px 9px;
+  border-radius: 50%;
+  color: #48C95F;
+  rotate: 180deg;
+  transition: 0.4s;
+}
+#header .header--logo__advertisingend button ion-icon:hover {
+  transform: rotate(180deg);
+}
+#header .header--logo__contact__one {
+  display: flex;
+  align-items: center;
+  max-width: 200px;
+  font-family: "Gilroy", sans-serif;
+  font-weight: 440;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+#header .header--logo__contact__one:hover {
+  color: #F5E934;
+  text-decoration-line: underline;
+}
+#header .header--logo__contact__one ion-icon {
+  color: #F5E934;
+  padding: 0 3px;
+}
+#header .header--logo__contact--midl {
+  font-weight: 600;
+  font-size: 23px;
+  color: #FFFFFF;
+}
+#header .header--nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 9px 10px;
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(5px);
+}
+#header .header--nav__menu {
+  display: flex;
+  align-items: center;
+  max-width: 200px;
+  background: #F5E934;
+  width: 4%;
+  height: 26px;
+}
+#header .header--nav__menu img {
+  margin-left: 5px;
+}
+#header .header--nav__menu a {
+  font-weight: 400;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+}
+#header .header--nav a {
+  font-weight: 300;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  transition: 0.2s;
+}
+#header .header--nav a:hover {
+  color: #F5E934;
+  text-decoration-line: underline;
+}
 #hero .hero h1 {
   font-family: "Futura PT", sans-serif;
   font-weight: 400;
@@ -209,4 +568,3 @@ a {
   color: #181818;
 }
 
-/*# sourceMappingURL=style.css.map */
