--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,67 @@
-
+@media (max-width: 1200px) {
+  .header--logo__image img {
+    margin-right: 40px;
+    width: 90%;
+  }
+  .header--logo__advertising a {
+    padding: 0 20px;
+  }
+  .header--logo__advertisingtwo a {
+    max-width: 100px;
+    padding: 0 20px;
+    font-weight: 400;
+    font-size: 14px !important;
+  }
+  .header--logo__advertisingthree a {
+    padding: 0 20px;
+  }
+  .header--logo__advertisingend a {
+    font-size: 9px !important;
+  }
+  .header--logo__contact {
+    margin-left: 20px;
+  }
+  .header--logo__contact--midl {
+    font-size: 20px !important;
+  }
+}
+@media (max-width: 1090px) {
+  #header .header--logo__advertising a {
+    width: 137px;
+  }
+  #header .header--logo__contact--midl {
+    font-size: 18px !important;
+  }
+}
+@media (max-width: 1180px) {
+  #header .header--logo__advertisingend a {
+    font-size: 9px !important;
+  }
+}
+@media (max-width: 1024px) {
+  #header .header--logo__advertising {
+    display: none !important;
+  }
+  #header .header--logo__advertisingtwo {
+    display: none !important;
+  }
+  #header .header--logo__advertisingthree {
+    display: none !important;
+  }
+  #header .header--logo__advertisingend {
+    display: none !important;
+  }
+  #header .header--logo__contact {
+    display: none !important;
+  }
+  #header .header--nav {
+    display: none !important;
+  }
+}
+@media (max-width: 992px) {
+  .hamburger-menu {
+    display: block;
+  }
+}
 
 /*# sourceMappingURL=media.css.map */
