--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,32 @@ a {
   margin: 0 auto;
 }
 
+@media (max-width: 1200px) {
+  #hero .hero--group {
+    flex-wrap: wrap;
+    align-items: center;
+  }
+}
+@media (max-width: 400px) {
+  #hero .hero h1 {
+    min-width: 16px;
+  }
+  #hero .hero--group--first--img {
+    width: 90%;
+  }
+  #hero .hero--group--second--img {
+    width: 90%;
+  }
+  #hero .hero--group--third--img {
+    width: 90%;
+  }
+}
+@media (max-width: 376px) {
+  #hero .hero h1 {
+    min-font-size: 16px;
+    font-size: 40px;
+  }
+}
 #hero .hero h1 {
   font-family: "Futura PT", sans-serif;
   font-weight: 400;
@@ -84,6 +110,109 @@ a {
   margin: 15px 0;
 }
 #hero .hero--group--first button:hover {
+  background: transparent;
+  color: black;
+  transform: scale(1.12);
+}
+#hero .hero--group--second--two {
+  width: 70%;
+  background: #FFFFFF;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+#hero .hero--group--second--two img {
+  position: relative;
+  bottom: 50px;
+}
+#hero .hero--group--second--two ul {
+  font-family: "Golos", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #393939;
+  position: absolute;
+}
+#hero .hero--group--second--two p {
+  font-family: "Gilroy", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #393939;
+}
+#hero .hero--group--second button {
+  font-family: "Futura PT", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 23px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #181818;
+  cursor: pointer;
+  background: linear-gradient(180deg, #FFF667 0%, #F5E934 100%);
+  padding: 15px 20px;
+  border: none;
+  transition: 0.6s;
+  margin: 15px 0;
+}
+#hero .hero--group--second button:hover {
+  background: transparent;
+  color: black;
+  transform: scale(1.12);
+}
+#hero .hero--group--third--three {
+  width: 70%;
+  background: #FFFFFF;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#hero .hero--group--third--three img {
+  position: relative;
+  bottom: 50px;
+}
+#hero .hero--group--third--three ul {
+  font-family: "Golos", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #393939;
+  position: absolute;
+}
+#hero .hero--group--third--three p {
+  font-family: "Gilroy", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #393939;
+}
+#hero .hero--group--third button {
+  font-family: "Futura PT", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 23px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #181818;
+  cursor: pointer;
+  background: linear-gradient(180deg, #FFF667 0%, #F5E934 100%);
+  padding: 15px 20px;
+  border: none;
+  transition: 0.6s;
+  margin: 15px 0;
+}
+#hero .hero--group--third button:hover {
   background: transparent;
   color: black;
   transform: scale(1.12);
