--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,14 @@
+@media (max-width: 1200px) {
+  #hero .hero--group {
+    flex-wrap: wrap;
+    align-items: center;
+  }
+}
+@media (max-width: 451px) {
+  #hero .hero--group--first--one img {
+    width: 90%;
+  }
+}
 
 
 /*# sourceMappingURL=media.css.map */
