--- a/media.scss
+++ b/media.scss
@@ -1,4 +1,77 @@
 @media (max-width: 1440px) {
+}
+
+@media (max-width: 1200px) {
+  #hero {
+    .hero {
+      &--group {
+        flex-wrap: wrap;
+        align-items: center;
+      }
+
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+}
+
+@media (max-width: 992px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 576px) {
+}
+
+@media (max-width: 451px) {
+  //#hero {
+  //  .hero {
+  //    &--group {
+  //      &--first {
+  //        &--img {
+  //          img {
+  //            width: 90%;
+  //          }
+  //        }
+  //
+  //      }
+  //    }
+  //
+  //  }
+  //}
+}
+
+@media (max-width: 400px) {
+  #hero {
+    .hero {
+      h1 {
+        min-width: 16px;
+      }
+
+      &--group {
+
+        &--first {
+          &--img {
+            width: 90%;
+          }
+
+        }
+
+        &--second {
+          &--img {
+            width: 90%;
+          }
+
+        }
+
+        &--third {
+          &--img {
+            width: 90%;
+          }
+
+        }
 
 }
 @media (max-width: 1200px) {
@@ -53,8 +126,6 @@
         }
 
 
-
-
       }
     }
   }
@@ -67,10 +138,7 @@
           a {
             width: 137px;
 
-
           }
-
-
         }
 
         &__contact {
@@ -85,6 +153,13 @@
     }
   }
 }
+
+@media (max-width: 376px) {
+  #hero {
+    .hero {
+      h1 {
+        min-font-size: 16px;
+        font-size: 40px;
 @media (max-width: 1180px) {
   #header {
     .header {
@@ -100,6 +175,11 @@
     }
   }
 }
+
+@media (max-width: 320px) {
+  #hero {
+    .hero {
+      h1 {
 @media (max-width: 1024px) {
 
   #header {
