--- a/mixin.scss
+++ b/mixin.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 @mixin start {
   display: flex;
   justify-content: space-between;
@@ -32,7 +33,6 @@
   align-items: center;
   flex-direction: column;
 }
-//+----TEXT---+//
 @mixin text {
   font-family: 'Futura PT', sans-serif;
   font-weight: 400;
@@ -69,6 +69,7 @@
 
 @mixin para {
   font-family: 'Gilroy', sans-serif;
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
